font-sizes/line heights corrected

--- a/source/gallery.html
+++ b/source/gallery.html
@@ -60,7 +60,11 @@
           <li class="video-list__item">
             <p class="video-list__title">Все еще сомневайтесь?</p>
             <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            <video class="video-list__clip" width="" height="" src="#" controls>
+            <img class="video-list__clip" src="#" width="" height="">
+            <div class="video-list__player">
+              <span class="video-list__line"></span>
+              <span class="video-list__handle" tabindex="0" aria-label="ползунок проигрывателя"></span>
+            </div>
             <span class="video-list__back" tabindex="0" aria-label="показать с начала"></span>
             <span class="video-list__subtitles" tabindex="0" aria-label="показать субтитры"></span>
             <span class="video-list__large" tabindex="0" aria-label="развернуть на весь экран"></span>
