--- a/source/gallery.html
+++ b/source/gallery.html
@@ -22,8 +22,8 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-main__header page-main-header">
-        <img class="gallery-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header">
+        <img class="gallery-main-header__img" src="img\text-sedona.svg" width="" height="">
       </header>
       <section class="gallery">
         <div class="gallery__wrapper">
