--- a/source/index.html
+++ b/source/index.html
@@ -22,8 +22,8 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-main__header page-main-header">
-        <img class="index-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header  page-main__header--index">
+        <img class="page-main__img" src="img\text-sedona-index.svg" width="" height="">
       </header>
       <section class="reasons">
         <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
