--- a/source/form.html
+++ b/source/form.html
@@ -22,8 +22,8 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-main__header page-main-header">
-        <img class="form-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header">
+        <img class="form-main-header__img" src="img\text-sedona.svg" width="" height="">
       </header>
       <section class="form">
         <div class="form__wrapper">
