--- a/source/index.html
+++ b/source/index.html
@@ -10,9 +10,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
       <nav class="main-nav">
-        <button class="main-nav__open-button" type="button"></button>
         <ul class="main-nav__list cite-nav">
           <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
           <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
@@ -21,14 +19,18 @@
         </ul>
         <button class="main-nav__close-button visually-hidden" type="button"></button>
       </nav>
+      <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
+      <button class="main-nav__open-button" type="button"></button>
     </header>
     <main class="page-main">
       <header class="page-main__header  page-main__header--index">
-        <img class="page-main__img" src="img\text-sedona-index.svg" width="" height="">
+        <img class="page-main__img" src="img/text-sedona-index.svg" width="280px" height="215px">
       </header>
       <section class="reasons">
-        <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
-        <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <div class="reasons__wrapper">
+          <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+          <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </div>
         <ul class="reasons__list reasons-list">
           <li class="reasons-list__item reasons-list__item--bg-blue">
             <h2 class="reasons-list__title">Настоящий городок</h3>
