--- a/source/gallery.html
+++ b/source/gallery.html
@@ -10,21 +10,21 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
       <nav class="main-nav">
-        <button class="main-nav__button" type="button" name="open"></button>
         <ul class="main-nav__list cite-nav">
           <li class="cite-nav__item"><a href="index.html">ГЛАВНАЯ</a></li>
-          <li class="cite-nav__item cite-nav__item--active"><a>ФОТО И ВИДЕО</a></li>
+          <li class="cite-nav__item  cite-nav__item--active"><a>ФОТО И ВИДЕО</a></li>
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
           <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
-        <button class="visually-hidden" type="button" name="close"></button>
+        <button class="main-nav__close-button visually-hidden" type="button"></button>
       </nav>
+      <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
+      <button class="main-nav__open-button" type="button"></button>
     </header>
     <main class="page-main">
-      <header class="page-main__header">
-        <img class="gallery-main-header__img" src="img\text-sedona.svg" width="" height="">
+      <header class="page-main__header page-main__header--inner">
+        <img class="page-main__img" src="img\text-sedona.svg" width="229px" height="39px">
       </header>
       <section class="gallery">
         <div class="gallery__wrapper">
