--- a/source/index.html
+++ b/source/index.html
@@ -33,10 +33,12 @@
         </div>
         <ul class="reasons__list reasons-list">
           <li class="reasons-list__item reasons-list__item--bg-blue">
-            <h2 class="reasons-list__title">Настоящий городок</h3>
-            <span class="reasons-list__number">-№1-</span>
-            <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-            <img class="reasons-list__img" src="#" width="" height="" alt="отель">
+            <div class="reasons-list__text">
+              <h2 class="reasons-list__title">Настоящий городок</h3>
+              <span class="reasons-list__number">-№1-</span>
+              <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            </div>
+            <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
           </li>
           <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Жилье</h3>
@@ -51,22 +53,24 @@
             <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
           <li class="reasons-list__item reasons-list__item--bg-blue">
-            <h2 class="reasons-list__title">Там есть мост дьявола</h3>
-            <span class="reasons-list__number">-№2-</span>
-            <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="reasons-list__img" src="#" width="" height="" alt="мост дьявола">
+            <div class="reasons-list__text">
+              <h2 class="reasons-list__title">Там есть мост дьявола</h3>
+              <span class="reasons-list__number">-№2-</span>
+              <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="reasons-list__img" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
           </li>
-          <li class="reasons-list__item">
+          <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Небольшая площадь</h3>
             <span class="reasons-list__number">-№3-</span>
             <p class="reasons-list__description">Все интересные места находятся очень близко</p>
           </li>
-          <li class="reasons-list__item">
+          <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Красивая дорога</h3>
             <span class="reasons-list__number">-№4-</span>
             <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
           </li>
-          <li class="reasons-list__item">
+          <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Мало туристов</h3>
             <span class="reasons-list__number">-№5-</span>
             <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
@@ -83,7 +87,7 @@
     <footer class="page-footer">
       <section class="map">
         <h4 class="visually-hidden">Карта</h4>
-        <img class="map__img" src="#" alt="карта">
+        <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320px" height="350px" alt="карта">
       </section>
       <section class="contacts">
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
