--- a/source/gallery.html
+++ b/source/gallery.html
@@ -33,25 +33,25 @@
         </div>
         <ul class="gallery__list pictures-list">
           <li class="pictures-list__item">
-            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото1"></a>
-            <p class="pictures-list__name">Народные просторы</p>
+            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" alt="фото1"></a>
+            <p class="pictures-list__name">Неродные просторы</p>
             <p class="pictures-list__author">Автор фото: Борис</p>
             <span class="pictures-list__likes">1350</span>
           </li>
           <li class="pictures-list__item">
-            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото2"></a>
+            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" width="280px" height="280px" alt="фото2"></a>
             <p class="pictures-list__name">Местная растительность</p>
             <p class="pictures-list__author">Автор фото: Сергей</p>
             <span class="pictures-list__likes">143</span>
           </li>
           <li class="pictures-list__item">
-            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото3"></a>
+            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" width="280px" height="280px" alt="фото3"></a>
             <p class="pictures-list__name">Дорога на север</p>
             <p class="pictures-list__author">Автор фото: Петр</p>
             <span class="pictures-list__likes">96</span>
           </li>
           <li class="pictures-list__item">
-            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото4"></a>
+            <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" width="280px" height="280px" alt="фото4"></a>
             <p class="pictures-list__name">Мост дьявола</p>
             <p class="pictures-list__author">Автор фото: Антон</p>
             <span class="pictures-list__likes">254</span>
