index tablet flexed

--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
               <span class="reasons-list__number">-№1-</span>
               <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             </div>
-            <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
+            <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
           </li>
           <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Жилье</h3>
@@ -58,7 +58,7 @@
               <span class="reasons-list__number">-№2-</span>
               <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="reasons-list__img" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
+            <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
           </li>
           <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Небольшая площадь</h3>
@@ -68,7 +68,7 @@
           <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Красивая дорога</h3>
             <span class="reasons-list__number">-№4-</span>
-            <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+            <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-list__item reasons-list__item--bg-grey">
             <h2 class="reasons-list__title">Мало туристов</h3>
