--- a/source/gallery.html
+++ b/source/gallery.html
@@ -34,34 +34,44 @@
         <ul class="gallery__list pictures-list">
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" alt="фото1"></a>
-            <p class="pictures-list__name">Неродные просторы</p>
-            <p class="pictures-list__author">Автор фото: Борис</p>
+            <div class="pictures-list__description">
+              <p class="pictures-list__name">Неродные просторы</p>
+              <p class="pictures-list__author">Автор фото: Борис</p>
+            </div>
             <span class="pictures-list__likes">1350</span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" width="280px" height="280px" alt="фото2"></a>
-            <p class="pictures-list__name">Местная растительность</p>
-            <p class="pictures-list__author">Автор фото: Сергей</p>
+            <div class="pictures-list__description">
+              <p class="pictures-list__name">Местная растительность</p>
+              <p class="pictures-list__author">Автор фото: Сергей</p>
+            </div>
             <span class="pictures-list__likes">143</span>
           </li>
-          <li class="pictures-list__item">
+          <li class="pictures-list__item pictures-list__item--bg-grey">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" width="280px" height="280px" alt="фото3"></a>
-            <p class="pictures-list__name">Дорога на север</p>
-            <p class="pictures-list__author">Автор фото: Петр</p>
+            <div class="pictures-list__description">
+              <p class="pictures-list__name">Дорога на север</p>
+              <p class="pictures-list__author">Автор фото: Петр</p>
+            </div>
             <span class="pictures-list__likes">96</span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" width="280px" height="280px" alt="фото4"></a>
-            <p class="pictures-list__name">Мост дьявола</p>
-            <p class="pictures-list__author">Автор фото: Антон</p>
+            <div class="pictures-list__description">
+              <p class="pictures-list__name">Мост дьявола</p>
+              <p class="pictures-list__author">Автор фото: Антон</p>
+            </div>
             <span class="pictures-list__likes">254</span>
           </li>
         </ul>
         <ul class="gallery__list video-list">
           <li class="video-list__item">
-            <p class="video-list__title">Все еще сомневайтесь?</p>
-            <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            <img class="video-list__clip" src="#" width="" height="">
+            <div class="video-list__wrapper">
+              <p class="video-list__title">Все еще сомневайтесь?</p>
+              <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
+            </div>
+            <img class="video-list__clip" src="img/video-mobile@1x.jpg" width="320px" height="280px">
             <div class="video-list__player">
               <span class="video-list__line"></span>
               <span class="video-list__handle" tabindex="0" aria-label="ползунок проигрывателя"></span>
