--- a/source/index.html
+++ b/source/index.html
@@ -9,96 +9,98 @@
     <meta name="description" content="">
   </head>
   <body>
-    <header class="page-header">
-      <nav class="main-nav">
-        <ul class="main-nav__list cite-nav">
-          <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
-          <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
-          <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
-          <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
-        </ul>
-        <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
-        <button class="main-nav__open-button" type="button"></button>
-        <button class="main-nav__close-button visually-hidden" type="button"></button>
-      </nav>
-    </header>
-    <main class="page-main">
-      <header class="page-main__header  page-main__header--index">
-        <img class="page-main__img" src="img/text-sedona-index.svg" width="280px" height="215px">
+    <div class="content-wrapper">
+      <header class="page-header">
+        <nav class="main-nav">
+          <ul class="main-nav__list cite-nav">
+            <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
+            <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
+            <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
+            <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
+          </ul>
+          <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
+          <button class="main-nav__open-button" type="button"></button>
+          <button class="main-nav__close-button visually-hidden" type="button"></button>
+        </nav>
       </header>
-      <section class="reasons">
-        <div class="reasons__wrapper">
-          <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
-          <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-        </div>
-        <ul class="reasons__list reasons-list">
-          <li class="reasons-list__item reasons-list__item--bg-blue">
-            <div class="reasons-list__text">
-              <h2 class="reasons-list__title">Настоящий городок</h3>
-              <span class="reasons-list__number">-№1-</span>
-              <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-            </div>
-            <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
-          </li>
-          <li class="reasons-list__item reasons-list__item--add-info">
-            <h2 class="reasons-list__add-info-title">Жилье</h3>
-            <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
-          </li>
-          <li class="reasons-list__item reasons-list__item--add-info">
-            <h2 class="reasons-list__add-info-title">Сувениры</h3>
-            <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
-          </li>
-          <li class="reasons-list__item reasons-list__item--add-info">
-            <h2 class="reasons-list__add-info-title">Еда</h3>
-            <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
-          </li>
-          <li class="reasons-list__item reasons-list__item--bg-blue">
-            <div class="reasons-list__text">
-              <h2 class="reasons-list__title">Там есть мост дьявола</h3>
-              <span class="reasons-list__number">-№2-</span>
-              <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            </div>
-            <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
-          </li>
-          <li class="reasons-list__item reasons-list__item--bg-grey">
-            <h2 class="reasons-list__title">Небольшая площадь</h3>
-            <span class="reasons-list__number">-№3-</span>
-            <p class="reasons-list__description">Все интересные места находятся очень близко</p>
-          </li>
-          <li class="reasons-list__item reasons-list__item--bg-grey">
-            <h2 class="reasons-list__title">Красивая дорога</h3>
-            <span class="reasons-list__number">-№4-</span>
-            <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="reasons-list__item reasons-list__item--bg-grey">
-            <h2 class="reasons-list__title">Мало туристов</h3>
-            <span class="reasons-list__number">-№5-</span>
-            <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
-        <section class="hotel-request">
-          <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
-          <b class="hotel-request__title">Заинтересовались?</b>
-          <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
-          <a class="hotel-request__link" href="#">Найти гостиницу</a>
+      <main class="page-main">
+        <header class="page-main__header  page-main__header--index">
+          <img class="page-main__img" src="img/text-sedona-index.svg" width="280px" height="215px">
+        </header>
+        <section class="reasons">
+          <div class="reasons__wrapper">
+            <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+            <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          </div>
+          <ul class="reasons__list reasons-list">
+            <li class="reasons-list__item reasons-list__item--bg-blue">
+              <div class="reasons-list__text">
+                <h2 class="reasons-list__title">Настоящий городок</h3>
+                <span class="reasons-list__number">-№1-</span>
+                <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+              </div>
+              <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
+            </li>
+            <li class="reasons-list__item reasons-list__item--add-info">
+              <h2 class="reasons-list__add-info-title">Жилье</h3>
+              <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
+            </li>
+            <li class="reasons-list__item reasons-list__item--add-info">
+              <h2 class="reasons-list__add-info-title">Сувениры</h3>
+              <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
+            </li>
+            <li class="reasons-list__item reasons-list__item--add-info">
+              <h2 class="reasons-list__add-info-title">Еда</h3>
+              <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+            </li>
+            <li class="reasons-list__item reasons-list__item--bg-blue">
+              <div class="reasons-list__text">
+                <h2 class="reasons-list__title">Там есть мост дьявола</h3>
+                <span class="reasons-list__number">-№2-</span>
+                <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              </div>
+              <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
+            </li>
+            <li class="reasons-list__item reasons-list__item--bg-grey">
+              <h2 class="reasons-list__title">Небольшая площадь</h3>
+              <span class="reasons-list__number">-№3-</span>
+              <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+            </li>
+            <li class="reasons-list__item reasons-list__item--bg-grey">
+              <h2 class="reasons-list__title">Красивая дорога</h3>
+              <span class="reasons-list__number">-№4-</span>
+              <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="reasons-list__item reasons-list__item--bg-grey">
+              <h2 class="reasons-list__title">Мало туристов</h3>
+              <span class="reasons-list__number">-№5-</span>
+              <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ul>
+          <section class="hotel-request">
+            <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
+            <b class="hotel-request__title">Заинтересовались?</b>
+            <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <a class="hotel-request__link" href="#">Найти гостиницу</a>
+          </section>
         </section>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section class="map">
-        <h4 class="visually-hidden">Карта</h4>
-        <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320px" height="350px" alt="карта">
-      </section>
-      <section class="contacts">
-        <h4 class="visually-hidden">Контакты в социальных сетях</h4>
-        <b class="contacts__tag">#visitsedona</b>
-        <ul class="contacts__list social-list">
-          <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
-        </ul>
-        <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
-      </section>
-    </footer>
+      </main>
+      <footer class="page-footer">
+        <section class="map">
+          <h4 class="visually-hidden">Карта</h4>
+          <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320px" height="350px" alt="карта">
+        </section>
+        <section class="contacts">
+          <h4 class="visually-hidden">Контакты в социальных сетях</h4>
+          <b class="contacts__tag">#visitsedona</b>
+          <ul class="contacts__list social-list">
+            <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+            <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+            <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+          </ul>
+          <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
