--- a/source/index.html
+++ b/source/index.html
@@ -32,46 +32,46 @@
             <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
             <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
-          <ul class="reasons__list reasons-list">
+          <ul class="reasons__list reasons-list columns">
             <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text">
+              <div class="reasons-list__text columns__item-33">
                 <h2 class="reasons-list__title">Настоящий городок</h3>
                 <span class="reasons-list__number">-№1-</span>
                 <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info">
+            <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
               <h2 class="reasons-list__add-info-title">Жилье</h3>
               <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info">
+            <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
               <h2 class="reasons-list__add-info-title">Сувениры</h3>
               <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info">
+            <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
               <h2 class="reasons-list__add-info-title">Еда</h3>
               <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text">
+              <div class="reasons-list__text columns__item-33">
                 <h2 class="reasons-list__title">Там есть мост дьявола</h3>
                 <span class="reasons-list__number">-№2-</span>
                 <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
             </li>
-            <li class="reasons-list__item reasons-list__item--bg-grey">
+            <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <h2 class="reasons-list__title">Небольшая площадь</h3>
               <span class="reasons-list__number">-№3-</span>
               <p class="reasons-list__description">Все интересные места находятся очень близко</p>
             </li>
-            <li class="reasons-list__item reasons-list__item--bg-grey">
+            <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <h2 class="reasons-list__title">Красивая дорога</h3>
               <span class="reasons-list__number">-№4-</span>
               <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="reasons-list__item reasons-list__item--bg-grey">
+            <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <h2 class="reasons-list__title">Мало туристов</h3>
               <span class="reasons-list__number">-№5-</span>
               <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
