--- a/source/gallery.html
+++ b/source/gallery.html
@@ -32,8 +32,8 @@
             <h1 class="gallery__title">Фото и видео</h1>
             <p class="gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
           </div>
-          <ul class="gallery__list pictures-list">
-            <li class="pictures-list__item">
+          <ul class="gallery__list pictures-list columns">
+            <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" alt="фото1"></a>
               <div class="pictures-list__description">
                 <p class="pictures-list__name">Неродные просторы</p>
@@ -41,7 +41,7 @@
               </div>
               <span class="pictures-list__likes">1350</span>
             </li>
-            <li class="pictures-list__item">
+            <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" width="280px" height="280px" alt="фото2"></a>
               <div class="pictures-list__description">
                 <p class="pictures-list__name">Местная растительность</p>
@@ -49,7 +49,7 @@
               </div>
               <span class="pictures-list__likes">143</span>
             </li>
-            <li class="pictures-list__item pictures-list__item--bg-grey">
+            <li class="pictures-list__item pictures-list__item--bg-grey columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" width="280px" height="280px" alt="фото3"></a>
               <div class="pictures-list__description">
                 <p class="pictures-list__name">Дорога на север</p>
@@ -57,7 +57,7 @@
               </div>
               <span class="pictures-list__likes">96</span>
             </li>
-            <li class="pictures-list__item">
+            <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" width="280px" height="280px" alt="фото4"></a>
               <div class="pictures-list__description">
                 <p class="pictures-list__name">Мост дьявола</p>
