index mobile corrected

--- a/source/index.html
+++ b/source/index.html
@@ -33,8 +33,8 @@
             <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
           <ul class="reasons__list reasons-list columns">
-            <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text columns__item-33">
+            <li class="reasons-list__item reasons-list__item--bg-blue columns__item-33">
+              <div class="reasons-list__text reasons-list__text--bg-blue">
                 <h2 class="reasons-list__title">Настоящий городок</h3>
                 <span class="reasons-list__number">-№1-</span>
                 <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
@@ -53,8 +53,8 @@
               <h2 class="reasons-list__add-info-title">Еда</h3>
               <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
             </li>
-            <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text columns__item-33">
+            <li class="reasons-list__item reasons-list__item--bg-blue columns__item-33">
+              <div class="reasons-list__text  reasons-list__text--bg-blue">
                 <h2 class="reasons-list__title">Там есть мост дьявола</h3>
                 <span class="reasons-list__number">-№2-</span>
                 <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
@@ -62,19 +62,25 @@
               <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <h2 class="reasons-list__title">Небольшая площадь</h3>
-              <span class="reasons-list__number">-№3-</span>
-              <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+              <div class="reasons-list__text">
+                <h2 class="reasons-list__title">Небольшая площадь</h3>
+                <span class="reasons-list__number">-№3-</span>
+                <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+              </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <h2 class="reasons-list__title">Красивая дорога</h3>
-              <span class="reasons-list__number">-№4-</span>
-              <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <div class="reasons-list__text">
+                <h2 class="reasons-list__title">Красивая дорога</h3>
+                <span class="reasons-list__number">-№4-</span>
+                <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <h2 class="reasons-list__title">Мало туристов</h3>
-              <span class="reasons-list__number">-№5-</span>
-              <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+              <div class="reasons-list__text">
+                <h2 class="reasons-list__title">Мало туристов</h3>
+                <span class="reasons-list__number">-№5-</span>
+                <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
             </li>
           </ul>
           <section class="hotel-request">
