index tablet corected

--- a/source/index.html
+++ b/source/index.html
@@ -42,16 +42,22 @@
               <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
             </li>
             <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
-              <h2 class="reasons-list__add-info-title">Жилье</h3>
-              <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
+              <div class="reasons-list__add-info-wrapper">
+                <h2 class="reasons-list__add-info-title">Жилье</h3>
+                <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
+              </div>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
-              <h2 class="reasons-list__add-info-title">Сувениры</h3>
-              <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
+              <div class="reasons-list__add-info-wrapper">
+                <h2 class="reasons-list__add-info-title">Сувениры</h3>
+                <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
+              </div>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
-              <h2 class="reasons-list__add-info-title">Еда</h3>
-              <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+              <div class="reasons-list__add-info-wrapper">
+                <h2 class="reasons-list__add-info-title">Еда</h3>
+                <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+              </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-blue columns__item-33">
               <div class="reasons-list__text  reasons-list__text--bg-blue">
@@ -85,9 +91,11 @@
           </ul>
           <section class="hotel-request">
             <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
-            <b class="hotel-request__title">Заинтересовались?</b>
-            <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <a class="hotel-request__link" href="#">Найти гостиницу</a>
+            <div class="hotel-request__wrapper">
+              <b class="hotel-request__title">Заинтересовались?</b>
+              <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
+              <a class="hotel-request__link" href="#">Найти гостиницу</a>
+            </div>
           </section>
         </section>
       </main>
