--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
             <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
             <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
           </ul>
-          <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
+          <a class="main-nav__logo"><img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="" height="" alt="логотип"></a>
           <button class="main-nav__open-button" type="button"></button>
           <button class="main-nav__close-button visually-hidden" type="button"></button>
         </nav>
