index mobile complete

--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
             <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
             <div class="hotel-request__wrapper">
               <b class="hotel-request__title">Заинтересовались?</b>
-              <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
+              <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
               <a class="hotel-request__link" href="#">Найти гостиницу</a>
             </div>
           </section>
@@ -108,9 +108,9 @@
           <h4 class="visually-hidden">Контакты в социальных сетях</h4>
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
-            <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-            <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-            <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+            <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank"><img class="social-list__img" src="img/icon-twitter.svg" width="" height="" alt="твиттер"></a></li>
+            <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank"><img class="social-list__img" href="" width="" height="" alt="фейсбук"></a></li>
+            <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank"><img class="social-list__img" href="" width="" height="" alt="ютуб"></a></li>
           </ul>
           <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
         </section>
