--- a/source/index.html
+++ b/source/index.html
@@ -33,13 +33,13 @@
             <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
           <ul class="reasons__list reasons-list columns">
-            <li class="reasons-list__item reasons-list__item--bg-blue columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-blue">
+            <li class="reasons-list__item reasons-list__item--bg-blue">
+              <div class="reasons-list__text reasons-list__text--bg-blue columns__item-33">
                 <h2 class="reasons-list__title">Настоящий городок</h3>
                 <span class="reasons-list__number">-№1-</span>
                 <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
-              <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
+              <img class="reasons-list__img reasons-list__img--hotel columns__item-66" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
             </li>
             <li class="reasons-list__item reasons-list__item--add-info columns__item-33">
               <div class="reasons-list__add-info-wrapper">
@@ -59,13 +59,13 @@
                 <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
               </div>
             </li>
-            <li class="reasons-list__item reasons-list__item--bg-blue columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-blue">
+            <li class="reasons-list__item reasons-list__item--bg-blue">
+              <div class="reasons-list__text reasons-list__text--bg-blue columns__item-33">
                 <h2 class="reasons-list__title">Там есть мост дьявола</h3>
                 <span class="reasons-list__number">-№2-</span>
                 <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
-              <img class="reasons-list__img reasons-list__img--bridge" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
+              <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__text">
