--- a/source/index.html
+++ b/source/index.html
@@ -96,17 +96,17 @@
               <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text">
-                <h2 class="reasons-list__title">Небольшая площадь</h3>
-                <span class="reasons-list__number">-№3-</span>
-                <p class="reasons-list__description">Все интересные места находятся очень близко</p>
+              <div class="reasons-list__text reasons-list__text--bg-grey">
+                <h2 class="reasons-list__title reasons-list__title--bg-grey">Небольшая площадь</h3>
+                <span class="reasons-list__number reasons-list__number--bg-grey">-№3-</span>
+                <p class="reasons-list__description reasons-list__description--bg-grey">Все интересные места находятся очень близко</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text">
-                <h2 class="reasons-list__title">Красивая дорога</h3>
-                <span class="reasons-list__number">-№4-</span>
-                <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <div class="reasons-list__text reasons-list__text--bg-grey">
+                <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая дорога</h3>
+                <span class="reasons-list__number reasons-list__number--bg-grey">-№4-</span>
+                <p class="reasons-list__description reasons-list__description--bg-grey">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
