--- a/source/index.html
+++ b/source/index.html
@@ -106,7 +106,7 @@
               <div class="reasons-list__text reasons-list__text--bg-grey">
                 <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая дорога</h3>
                 <span class="reasons-list__number reasons-list__number--bg-grey">-№4-</span>
-                <p class="reasons-list__description reasons-list__description--bg-grey">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
